--- a/templates/includes/footer.html.twig
+++ b/templates/includes/footer.html.twig
@@ -28,6 +28,7 @@
 
 <footer class="sacda-footer relative flex flex-col-reverse justify-between gap-4 px-6 pt-10 pb-24 md:flex-row md:py-24 lg:flex-row lg:py-24 bg-(--sacda-secondary)" style="--sacda-primary: {{ primary_color|default('#F99D2A') }}; --sacda-secondary: {{ secondary_color|default('#414042') }}; --sacda-light: {{ light_color|default('#FFEDC2') }};">
 	{# Partners section #}
+	<div class="">
  	<div class="flex flex-row items-center gap-5 pb-3">
  		{% for partner in footer_partners %}
 			<a href="{{ partner.link }}" target="_blank" rel="noopener noreferrer" class="inline-flex items-center h-10 min-w-0">
@@ -35,6 +36,7 @@
 			</a>
  		{% endfor %}
  	</div>
+	</div>
 
 	{# Social links section #}
 	<div class="flex w-full flex-col items-center gap-4 md:w-fit lg:w-fit">
