--- a/templates/includes/header.html.twig
+++ b/templates/includes/header.html.twig
@@ -26,7 +26,8 @@
 			{% endif %}
 		</a>
 
-		<button class="sacda-mobile-nav-toggle absolute top-0 left-full p-10 md:hidden lg:hidden border-none cursor-pointer" style="background-color: var(--sacda-primary-color);" aria-expanded="false" aria-controls="sacda-nav-content" id="sacda-mobile-toggle" type="button">
+		<button class="sacda-mobile-nav-toggle absolute top-0 right-10 px-8 py-10 md:hidden lg:hidden border-none cursor-pointer" style="background-color: var(--sacda-primary-color);" aria-expanded="false" aria-controls="sacda-nav-content" id="sacda-mobile-toggle" type="button">
+			<span class="sr-only">Toggle navigation</span>
 			<svg class="sacda-toggle-icon icon-menu" width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path d="M3 12H21" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 				<path d="M3 6H21" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -39,7 +40,7 @@
 		</button>
 	</div>
 
-	<div id="sacda-nav-content" class="sacda-nav-content flex flex-col items-end gap-4 ">
+	<div id="sacda-nav-content" class="sacda-nav-content flex flex-col items-end gap-4">
 		<div class="sacda-menu-top">{{ page.menu_top }}</div>
 		<div class="sacda-menu-bottom flex">{{ page.menu_bottom }}</div>
 	</div>
@@ -79,7 +80,16 @@
 
 	/* Navigation Links */
 	.sacda-header .sacda-nav-list .sacda-nav-item .sacda-nav-link {
-		@apply border-b-2 border-transparent pb-1 transition-all duration-200 ease-in-out no-underline inline-block text-black font-semibold;
+		border-bottom-width: 2px;
+		border-bottom-color: transparent;
+		padding-bottom: 0.25rem;
+		transition-property: all;
+		transition-duration: 200ms;
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+		text-decoration: none;
+		display: inline-block;
+		color: #000;
+		font-weight: 600;
 	}
 
 	.sacda-header .sacda-nav-list .sacda-nav-item .sacda-nav-link:hover {
@@ -94,7 +104,6 @@
 		padding: 2rem 1rem 1rem;
 	}
 </style>
-
 
 <script>
 	(function () {
