--- a/templates/menus/menu--main.html.twig
+++ b/templates/menus/menu--main.html.twig
@@ -17,7 +17,7 @@
 {% macro menu_links(items, attributes, menu_level) %}
 	{% import _self as menus %}
 	{% if items %}
-		<ul {{ attributes.addClass('sacda-nav-list', 'flex', 'flex-col', 'items-center', 'gap-4', 'list-none', 'm-0', 'p-0') }}>
+		<ul class="sacda-nav-list flex flex-col md:flex-row items-center gap-4 list-none m-0 p-0">
 			{% for item in items %}
 				<li class="sacda-nav-item list-none m-0 p-0">
 					<a href="{{ item.url }}" class="sacda-nav-link inline-block font-semibold uppercase no-underline transition-all duration-200 text-black" style="padding-bottom: 0.25rem; border-bottom: 2px solid transparent;{% if item.in_active_trail %} border-bottom-color: var(--sacda-primary, #F99D2A);{% endif %}" {% if item.in_active_trail %} aria-current="page" {% endif %}>
@@ -36,6 +36,7 @@
 	/* Main nav list - responsive layout */
 	@media all and(min-width: 48rem) {
 		.sacda-nav-list {
+			display: flex;
 			flex-direction: row;
 			gap: 1.5rem;
 		}
