--- a/templates/page/page--landing.html.twig
+++ b/templates/page/page--landing.html.twig
@@ -12,30 +12,31 @@
 #}
 <div class="">
 
-  {% include '@sacda_test/includes/header.html.twig' %}
+	{% include '@sacda_test/includes/header.html.twig' %}
 
-  <main role="main" class="main-content">
-    <a id="main-content" tabindex="-1"></a>
-    {# link is in html.html.twig #}
+	<main role="main" class="main-content">
+		<a id="main-content" tabindex="-1"></a>
+		{# link is in html.html.twig #}
 
-    <div class="layout-content">
-      {{ page.content }}
-    </div>
+		<div class="layout-content">
+			{{ include('sacda_test:test_component') }}
+			{{ page.content }}
+		</div>
 
-    {% if page.sidebar_first %}
-    <aside class="layout-sidebar-first" role="complementary">
-      {{ page.sidebar_first }}
-    </aside>
-    {% endif %}
+		{% if page.sidebar_first %}
+			<aside class="layout-sidebar-first" role="complementary">
+				{{ page.sidebar_first }}
+			</aside>
+		{% endif %}
 
-    {% if page.sidebar_second %}
-    <aside class="layout-sidebar-second" role="complementary">
-      {{ page.sidebar_second }}
-    </aside>
-    {% endif %}
+		{% if page.sidebar_second %}
+			<aside class="layout-sidebar-second" role="complementary">
+				{{ page.sidebar_second }}
+			</aside>
+		{% endif %}
 
-  </main>
+	</main>
 
-  {% include '@sacda_test/includes/footer.html.twig' %}
+	{% include '@sacda_test/includes/footer.html.twig' %}
 
 </div>
