--- a/templates/menus/menu--main.html.twig
+++ b/templates/menus/menu--main.html.twig
@@ -13,7 +13,7 @@
 #}
 {% import _self as menus %}
 
-<div class="sacda-main-menu flex items-center justify-end m-0!" role="navigation" aria-label="{{ menu_name ? menu_name|capitalize : 'Main' }} navigation">
+<div class="sacda-main-menu flex items-center justify-end m-0" role="navigation" aria-label="{{ menu_name ? menu_name|capitalize : 'Main' }} navigation">
 	{{ menus.menu_links(items, attributes, 0) }}
 </div>
 
